--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
-    <link rel="stylesheet" href="../01-css-methods/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <style>
       p{
@@ -17,7 +17,7 @@
 
   </head>
   <body>
-    <div id="external">Style me via the external method!</div>
+    <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color: orange; font-size: 18px;">Inline Method</button>
   </body>
